# post_visual

./: .dockerignore  .gitignore  AGENTS.md  README.md  conda-lock.yml  environment.yml  post_visual.toml  pyproject.toml  sci_plot.m
.codex/: HANDOFF.md  ROUTING.md  WORKSPACE.md  manifest.yaml
.codex/handoffs/: 2026-07-09-mvp-stage-close.md  2026-07-10-doc-maintenance.md  2026-07-12-comparison-recipes.md  2026-07-12-interpretation-recipes.md  2026-07-13-connectivity-matrix.md  2026-07-13-primitive-first-roadmap.md  README.md
.codex/tasks/: README.md  post-visual-toolkit.md
.codex/workflows/: continuity-maintenance.md  docs-hygiene.md  route-sync.md  session-closure.md  validate-doc-paths.ps1  validate-doc-paths.sh
docs/: INDEX.md
docs/architecture/: README.md  plot-catalog.md  toolkit-architecture.md
docs/decisions/: 0001-initial-toolkit-scope.md  0002-primitives-before-recipes.md  0003-general-core-closure.md  0004-docker-only-runtime-and-texlive.md  0005-native-wsl-micromamba-texlive.md  README.md
examples/: annotation_mvp.py  annotation_point_mvp.py  axes_helpers_mvp.py  comparison_recipes.py  distribution_enhancements.py  interpretation_recipes.py  layout_image_mvp.py  line_mvp.py  line_scatter_enhancements.py  primitives_mvp.py  recipes_mvp.py  rendering_smoke.py  second_batch_mvp.py  signal_recipes.py  usetex_module_gallery.py
scripts/: bootstrap-wsl.sh  setup-dev.ps1  test-docker.ps1  test-latex-wsl.sh  test-wsl.sh
tests/: test_annotations.py  test_annotations_point_range.py  test_axes_helpers.py  test_distributions_matrix.py  test_interpretation.py  test_intervals.py  test_layout_image.py  test_line.py  test_recipes.py  test_rendering.py  test_rendering_latex.py  test_scatter_bars.py  test_signal.py  test_style.py
(+37 files in other folders)
